--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import '@taiga-ui/core/styles/taiga-ui-theme.less';
+@import '@taiga-ui/core/styles/taiga-ui-fonts.less';
+@import '@taiga-ui/styles/taiga-ui-global.less';
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
